src/test/ui/const-generics/const-param-type-depends-on-type-param-ungated.stderr
error[E0770]: the type of const parameters must not depend on other generic parameters
  --> $DIR/const-param-type-depends-on-type-param-ungated.rs:3:22
   |
LL | struct B<T, const N: T>(PhantomData<[T; N]>);
   |                      ^ the type must not depend on the parameter `T`

error[E0658]: const generics are unstable
  --> $DIR/const-param-type-depends-on-type-param-ungated.rs:3:19
   |
LL | struct B<T, const N: T>(PhantomData<[T; N]>);
   |                   ^
   |
   = note: see issue #44580 <https://github.com/rust-lang/rust/issues/44580> for more information
   = help: add `#![feature(const_generics)]` to the crate attributes to enable

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0658, E0770.
For more information about an error, try `rustc --explain E0658`.
